--- a/src/main/resources/templates/onboarding/change-credentials.html
+++ b/src/main/resources/templates/onboarding/change-credentials.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="layouts/public-layout.html :: 'head' ">
 </head>
 <body>
@@ -37,7 +38,7 @@
 							name="confirmNewCredential" type="password" class="form-control"
 							id="confirmNewPass" required>
 					</div>
-					<input type="hidden" name="username" value="${username}"/>
+					<input type="hidden" name="username" th:value="${#authentication.name}"/>
 					<div class=" row justify-content-md-center c">
 						<div class="col-sm-3"
 							style="display: flex; justify-content: center;">
