--- a/src/main/resources/templates/layouts/public-layout.html
+++ b/src/main/resources/templates/layouts/public-layout.html
@@ -10,6 +10,12 @@
 <meta name="author" content="Dany Lasso" />
 <title th:text="'Los Chinitos'"></title>
 <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+
+<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}" />
+<link
+	href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+	rel="stylesheet" />
+
 <!-- Font Awesome icons (free version)-->
 <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
 	crossorigin="anonymous"></script>
@@ -89,6 +95,9 @@
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
 			integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
 			crossorigin="anonymous"></script>
+		<script th:src="@{/js/jquery-3.2.1.min.js}"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/jquery-ui.min.js}"></script>
 	</footer>
 </body>
 </html>
