--- a/src/main/resources/templates/store/products.html
+++ b/src/main/resources/templates/store/products.html
@@ -1,13 +1,165 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="layouts/public-layout.html :: 'head' ">
 </head>
-<body>
-<header th:replace="layouts/public-layout.html :: 'header' "> </header>
-<main>
-<section>Filtrar productos</section>
-<section>Matriz de productos</section>
-</main>
-<footer th:replace="layouts/public-layout.html :: 'footer' "> </footer>
+<body id="page-top">
+	<!-- Navigation-->
+	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+		<div class="container" sec:authorize="isAuthenticated()">
+			<a class="navbar-brand js-scroll-trigger" href="#page-top">Los
+				Chinitos</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button"
+				data-toggle="collapse" data-target="#navbarResponsive"
+				aria-controls="navbarResponsive" aria-expanded="false"
+				aria-label="Toggle navigation">
+				Menu <i class="fas fa-bars ml-1"></i>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav text-uppercase ml-auto">
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						th:href="@{/store/home}">Menú Principal</a></li>
+					<!-- ENLACE A USUARIOS -->
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						th:href="@{/store/factura}">Facturación</a></li>
+
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						href="#team"> <span class="btn btn-light btn-sm"
+							sec:authentication="name"></span></a></li>
+
+					<li class="nav-item">
+						<form th:action="@{/logout}" class="nav-link js-scroll-trigger"
+							method="post">
+							<button class="btn btn-danger btn-sm" type="submit">CERRAR
+								SESIÓN</button>
+						</form>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<br>
+	<br>
+	<br>
+	<br>
+	
+	<div class="alert alert-success" th:if="${success!=null}" th:text="${success}"></div>
+	<div class="alert alert-danger" th:if="${danger!=null}" th:text="${error}"></div>
+	<div class="alert alert-warning" th:if="${warning!=null}" th:text="${warning}"></div>
+	<div class="alert alert-info" th:if="${info!=null}" th:text="${info}"></div>
+	
+	<div class="container">
+		<h1 th:text="${titulo}"></h1>
+		<div class="form-group">
+			<div class="container">
+				<button class="btn btn-primary"
+					onclick="AbrirModalRegistroProducto()">
+					<i class="fa fa-plus"></i>&nbsp;Agregar Producto
+				</button>
+			</div>
+		</div>
+
+		<table class="table">
+			<thead class="thead-dark">
+				<tr>
+					<th>Código</th>
+					<th>Nombre</th>
+					<th>Descripción</th>
+					<th>Precio</th>
+					<th>Stock</th>
+					<th>Fecha de Ingreso</th>
+					<th>Imagen</th>
+					<th>Acciones</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="product : ${productos}">
+					<td th:text="${product.code_product}"></td>
+					<td th:text="${product.name_product}"></td>
+					<td th:text="${product.description_product}"></td>
+					<td th:text="${product.price_product}"></td>
+					<td th:text="${product.stock_product}"></td>
+					<td th:text="${product.created_product}"></td>
+					<td style="width:100px"><img class="img-responsive float-right" style="width: 120%;" th:src="@{'/uploads/'+${product.img_product}}" th:alt="${product.img_product}"> </td>
+					<td>
+						<button type="button" class="btn btn-primary">
+							<i class="far fa-edit"></i>
+						</button>
+						<button type="button" class="btn btn-danger">
+							<i class="fas fa-trash"></i>
+						</button>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+
+	</div>
+
+	<form method="post" th:object="${product}" th:action="@{/addProduct}" enctype="multipart/form-data">
+		<div class="modal fade" id="modal_registro_producto" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h3 class="modal-title">
+							<b>Registro de Nuevo Producto</b>
+						</h3>
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+					</div>
+					<div class="modal-body">
+						<div class="col-lg-12">
+							<label for="">Nombre del Producto</label> <input type="text"
+								class="form-control" th:field="*{name_product}"
+								placeholder="Ingrese el nombre del producto" /> <br>
+						</div>
+						<div class="col-lg-12">
+							<label for="">Descripción del Producto</label> <input type="text"
+								class="form-control" th:field="*{description_product}"
+								placeholder="Ingrese la descripción del producto" /> <br>
+						</div>
+						<div class="col-lg-12">
+							<label for="">Precio del Producto</label> <input type="text"
+								class="form-control" th:field="*{price_product}"
+								placeholder="Ingrese el precio del producto" /> <br>
+						</div>
+						<div class="col-lg-12">
+							<label for="">Stock del Producto</label> <input type="number"
+								class="form-control" th:field="*{stock_product}"
+								placeholder="Ingrese el stock del producto" /> <br>
+						</div>
+						<div class="col-lg-12">
+							<label for="">Fecha de ingreso del Producto</label> <input type="date"
+								class="form-control" th:field="*{created_product}"
+								placeholder="Selecciones una fecha" /> <br>
+						</div>
+						<div class="col-lg-12">
+							<label for="">Imagen del producto</label> <input type="file" name="file"
+								class="form-control"
+								placeholder="Selecciones una imagen" /> <br>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<i class="fa fa-check"></i>&nbsp; <input type="submit"
+							class="btn btn-primary" value="Guardar Producto" />
+
+						<button type="button" class="btn btn-danger" data-dismiss="modal">
+							<i class="fa fa-close"></i>&nbsp;Cerrar
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</form>
+
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- Third party plugin JS-->
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+
+	<script src="/js/scripts.js"></script>
+
 </body>
+<footer th:replace="layouts/public-layout.html :: 'footer' "> </footer>
 </html>
