guardar usuario con permisos

--- a/src/main/resources/templates/management/index.html
+++ b/src/main/resources/templates/management/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html  xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="layouts/internt-layout.html :: 'head' "></head>
 <body>
 	<header th:replace="layouts/internt-layout.html :: 'header' "></header>
