--- a/src/main/resources/static/css/private-pages.css
+++ b/src/main/resources/static/css/private-pages.css
@@ -89,3 +89,12 @@
     min-height: 250px;
     align-self: center;
 }
+
+
+.card-user-img{
+	min-height: 150px;
+    max-height: 180px;
+    max-width: 180px;
+    min-width: 150px;
+    align-self: center;
+}
