--- a/src/main/resources/templates/layouts/internt-layout.html
+++ b/src/main/resources/templates/layouts/internt-layout.html
@@ -55,7 +55,6 @@
 								<div class="accordion-body"
 									th:each="item :  ${category.subItems}">
 									<a th:href="@{${item.url}}" th:text="${item.name}"></a>
-									<a th:href="@{/admin/users/index}" th:text="${item.name}"></a>
 								</div>
 							</div>
 						</div>
@@ -70,7 +69,8 @@
 						<button class="openbtn" onclick="openNav()">☰</button>
 					</div>
 					<div class="col-sm-6">
-						<h4 class="title-sidebar" th:text="${(titlePage != null)? titlePage : 'Comercializador Monster - Internos' }"></h4>
+						<h4 class="title-sidebar"
+							th:text="${(titlePage != null)? titlePage : 'Comercializador Monster - Internos' }"></h4>
 					</div>
 					<div class="col-sm-3" sec:authorize="isAuthenticated()">
 						<ul class="navbar-nav text-uppercase ml-auto">
@@ -109,6 +109,17 @@
 				</div>
 			</div>
 		</div>
+
+
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+		<!-- Third party plugin JS-->
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+
+
 		<script src="/js/navbar.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
