--- a/src/main/resources/templates/users/users-view.html
+++ b/src/main/resources/templates/users/users-view.html
@@ -1,51 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="layouts/public-layout.html :: 'head' ">
+
+<head th:replace="layouts/internt-layout.html :: 'head' ">
 </head>
 
-<body id="page-top">
-	<!-- Navigation-->
-	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-		<div class="container" sec:authorize="isAuthenticated()">
-			<a class="navbar-brand js-scroll-trigger" href="#page-top">Los
-				Chinitos</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button"
-				data-toggle="collapse" data-target="#navbarResponsive"
-				aria-controls="navbarResponsive" aria-expanded="false"
-				aria-label="Toggle navigation">
-				Menu <i class="fas fa-bars ml-1"></i>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav text-uppercase ml-auto">
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						th:href="@{/store/home}">Menú Principal</a></li>
-					<!-- ENLACE A USUARIOS -->
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						th:href="@{/users/users-view}">Usuarios</a></li>
+<body id="page-top ">
+	<header th:replace="layouts/internt-layout.html :: 'header' "></header>
 
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						href="#team"> <span class="btn btn-light btn-sm"
-							sec:authentication="name"></span></a></li>
-
-					<li class="nav-item">
-						<form th:action="@{/logout}" class="nav-link js-scroll-trigger"
-							method="post">
-							<button class="btn btn-danger btn-sm" type="submit">CERRAR
-								SESIÓN</button>
-						</form>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<div class="container">
-		<h1 th:text="${titulo}"></h1>
+	<div class="container mt-3">
+		<h1 class="mt-4" th:text="${titulo}"></h1>
 		<div class="form-group">
 			<div class="container">
 				<button class="btn btn-primary"
@@ -100,51 +64,57 @@
 					</div>
 					<div class="modal-body">
 						<div class="row no-gutters">
-							<div class="col-12 col-sm-6 col-md-8"
-								style="border: 2px solid silver">
-								<br>
+							<div class="col-12 col-sm-6 col-md-8">
 								<h4 style="text-align: center;">Datos Personales</h4>
 								<br>
 								<div class="form-group row">
-									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-2 col-form-label">Nombres</label>
-									<div class="col-sm-9">
+									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-4 col-form-label">Nombres</label>
+									<div class="col-sm-7">
 										<input type="text" th:field="*{names}" class="form-control"
-											id="names" placeholder="Ingrese los nombres" /> <br>
+											id="names" placeholder="Ingrese los nombres" />
 									</div>
 								</div>
 								<div class="form-group row">
-									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-2 col-form-label">Apellidos</label>
-									<div class="col-sm-9">
+									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-4 col-form-label">Apellidos</label>
+									<div class="col-sm-7">
 										<input type="text" th:field="*{lastnames}"
 											class="form-control" id="lastnames"
-											placeholder="Ingrese los apellidos" /> <br>
+											placeholder="Ingrese los apellidos" />
 									</div>
 								</div>
 								<div class="form-group row">
 									&nbsp;&nbsp;&nbsp;<label for="staticEmail"
-										class="col-sm-2 col-form-label">Cédula</label>
-									<div class="col-sm-9">
+										class="col-sm-4 col-form-label">Cédula</label>
+									<div class="col-sm-7">
 										<input type="text" th:field="*{numDocument}"
 											class="form-control" id="numDocument"
-											placeholder="Ingrese la cédula" /> <br>
+											placeholder="1700000001" />
+									</div>
+								</div>
+								<div class="form-group row">
+									&nbsp;&nbsp;&nbsp;<label for="staticEmail" class="col-sm-4 ">Tipo
+										de Usuario</label>
+									<div class="col-sm-7">
+										<select class="form-select" th:field="*{type}">
+										  <option selected   disabled  value="0">Seleccione un tipo</option>
+										  <option  th:each="typeUser: ${types}" th:value="${typeUser.code}" th:text="${typeUser.name}"></option>
+										</select>
 									</div>
 								</div>
 							</div>
-							<div class="col-6 col-md-4" style="border: 2px solid silver">
-								<br>
-								<h4>Imagen del Usuario</h4>
+							<div class="col-6 col-md-4">
+								<h5 class="text-center">Imagen del Usuario</h5>
 								<div class="card">
-									<img class="card-img-top" src="/img/user.png"
+									<img class="card-img-top card-user-img" src="/img/user.png"
 										alt="Card image cap">
 									<div class="card-body" style="width: auto;">
-										&nbsp;<input type="file" value="Seleccionar archivo"
-											style="color: transparent" />
+										<input type="file" value="Seleccionar archivo"
+											style="color: transparent; background-color: transparent;" />
 									</div>
 								</div>
 							</div>
 						</div>
-						<br> <br>
-						<ul class="nav nav-tabs justify-content-center" id="myTab"
+						<ul class="nav   nav-tabs justify-content-center" id="myTab"
 							role="tablist">
 							<li class="nav-item"><a class="nav-link active"
 								id="home-tab" data-toggle="tab" href="#home" role="tab"
@@ -153,65 +123,144 @@
 								data-toggle="tab" href="#profile" role="tab"
 								aria-controls="profile" aria-selected="false">Cuenta de
 									usuario</a></li>
+							<li class="nav-item"><a class="nav-link" id="profile-tab"
+								data-toggle="tab" href="#addressHome" role="tab"
+								aria-controls="permissions" aria-selected="false">Domicilio</a></li>
+							<li class="nav-item"><a class="nav-link" id="profile-tab"
+								data-toggle="tab" href="#permissions" role="tab"
+								aria-controls="permissions" aria-selected="false">Permisos</a></li>
 						</ul>
+
+
 						<div class="tab-content" id="myTabContent">
+
 							<div class="tab-pane fade show active" id="home" role="tabpanel"
 								aria-labelledby="home-tab">
 								<br>
 								<div class="form-group row">
-									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-2 col-form-label">Correo
+									<label for="" class="ml-1 col-sm-3 col-form-label">Correo
 										Electrónico</label>
-									<div class="col-sm-9">
+									<div class="col-sm-8">
 										<input type="text" th:field="*{email}" class="form-control"
-											id="email" placeholder="Ingrese un correo" /> <br>
+											id="email" placeholder="user@example.com" />
 									</div>
 								</div>
 								<div class="form-group row">
-									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-2 col-form-label">Teléfono
+									<label for="" class="ml-1 col-sm-3 col-form-label">Teléfono
 										celular</label>
-									<div class="col-sm-9">
+									<div class="col-sm-8">
 										<input type="text" th:field="*{phone}" class="form-control"
-											id="phone" placeholder="Ingrese el teléfono" /> <br>
+											id="phone" placeholder="022000001" />
 									</div>
 								</div>
 								<div class="form-group row">
-									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-2 col-form-label">Dirección</label>
-									<div class="col-sm-9">
-										<select class="form-control" th:field="*{addressHome}"
-											name="txt_direccion" id="addressHome">
-											<option value="">Selecione una opción</option>
-											<option th:each="direccion:${direcciones}"
-												th:value="${direccion.code}" th:text="${direccion.city}" />
-										</select><br>
+									<label for="" class="ml-1 col-sm-3 col-form-label">Discapacidad</label>
+									<div class="col-sm-8">
+										<input type="text" th:field="*{disability}" class="form-control"
+											id="disability" />
 									</div>
 								</div>
 
 							</div>
+
 							<div class="tab-pane fade" id="profile" role="tabpanel"
 								aria-labelledby="profile-tab">
 								<br>
 								<div class="form-group row">
-									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-2 col-form-label">Nombre
+									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-4 col-form-label">Nombre
 										de usuario</label>
-									<div class="col-sm-9">
+									<div class="col-sm-7">
 										<input type="text" th:field="*{nickname}" class="form-control"
 											id="nickname" placeholder="Ingrese el nombre de usuario" />
 										<br>
 									</div>
 								</div>
 								<div class="form-group row">
-									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-2 col-form-label">Contraseña</label>
-									<div class="col-sm-9">
+									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-4 col-form-label">Contraseña</label>
+									<div class="col-sm-7">
 										<input type="text" class="form-control" id="password"
-											disabled="true" placeholder="Generada aleatoriamente" /> <br>
+											disabled  placeholder="Generada aleatoriamente" /> <br>
 									</div>
 								</div>
 							</div>
+
+
+							<div class="tab-pane fade" id="permissions" role="tabpanel"
+								aria-labelledby="profile-tab">
+								<div class="form-group row">
+									&nbsp;&nbsp;&nbsp;<label for="" class="col-form-label">Seleccione
+										los sistemas que el usuario va a poder acceder:</label>
+									<div class="col  align-self-center">
+										<ul>
+											<li th:each="systemAplication : ${systemsApp}">
+											
+											<input
+												type="checkbox" th:id="${systemAplication.keyword}"
+												th:value="${systemAplication.keyword}" th:field="*{permissons}" /> 
+												<label
+												th:text="${systemAplication.name + ': ' + systemAplication.description}">
+											</label>
+											
+											</li>
+
+										</ul>
+									</div>
+								</div>
+							</div>
+
+							<div class="tab-pane fade" id="addressHome" role="tabpanel"
+								aria-labelledby="profile-tab">
+
+								<div class="form-group row">
+									<br> <label for="" class="ml-1 col-sm-3 col-form-label">Ciudad:</label>
+									<div class="col-sm-8">
+										<select class="form-select" th:field="*{city}">
+										  <option selected disabled value="0">Seleccione una ciudad</option>
+										  <option  th:each="city: ${citys}" th:value="${city.name}" th:text="${city.name}"></option>
+										</select>
+									</div>
+								</div>
+								<div class="form-group row">
+									<label for="" class="ml-1 col-sm-3 col-form-label">Calle
+										Principal:</label>
+									<div class="col-sm-8">
+										<input type="text" th:field="*{mainStreet}" class="form-control"
+											id="phone" placeholder="022000001" />
+									</div>
+								</div>
+								<div class="form-group row">
+									<label for="" class="ml-1 col-sm-3 col-form-label">Calle
+										Secundaria:</label>
+									<div class="col-sm-8">
+										<input type="text" th:field="*{secondaryStreet}" class="form-control"
+											id="phone" />
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label for="" class="ml-1 col-sm-3 col-form-label">Barrio:</label>
+									<div class="col-sm-8">
+										<input type="text" th:field="*{neighborhood}" class="form-control"
+											id="phone" />
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label for="" class="ml-1 col-sm-3 col-form-label">Numeración
+										Casa:</label>
+									<div class="col-sm-8">
+										<input type="text" th:field="*{houseNumbering}" class="form-control"
+											id="phone" />
+									</div>
+								</div>
+
+							</div>
+
 						</div>
-						<input type="hidden" id="currentState" name="currentState" value="1" />
 					</div>
 					<div class="modal-footer">
-						<i class="fa fa-check"></i>&nbsp; <input type="submit"
+
+						| <i class="fa fa-check"></i>&nbsp; <input type="submit"
 							class="btn btn-primary" value="Guardar" onclick="userRegister();" />
 
 						<button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -223,101 +272,12 @@
 		</div>
 	</form>
 
-	<!-- <form method="post" th:object="${usuario}" th:action="@{/newUser}">
-		<div class="modal fade" id="modal_registro_usuario" role="dialog">
-			<div class="modal-dialog modal-lg">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h3 class="modal-title">
-							<b>Registro de Nuevo Usuario</b>
-						</h3>
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-					</div>
-					<div class="modal-body">
-						<div class="row" style="border: 2px solid silver">
-							<h4>Datos Personales</h4>
-							<div class="col-lg-6">
-								<label for="">Nombres</label> <input type="text"
-									th:field="*{names}" class="form-control" id="names"
-									placeholder="Ingrese los nombres" /> <br>
-							</div>
-							<div class="col-lg-6">
-								<label for="">Apellidos</label> <input type="text"
-									th:field="*{lastnames}" class="form-control" id="lastnames"
-									placeholder="Ingrese los apellidos" /> <br>
-							</div>
-							<div class="col-lg-6">
-								<label for="">Cédula</label> <input type="text"
-									th:field="*{numDocument}" class="form-control" id="numDocument"
-									placeholder="Ingrese la cédula" /> <br>
-							</div>
-							<div class="col-lg-6">
-								<label for="">Fecha de nacimiento</label>
-								<br>
-							</div>
-							<div class="col-lg-6">
-								<label for="">Correo</label> <input type="text"
-									th:field="*{email}" class="form-control" id="email"
-									placeholder="Ingrese un correo" /> <br>
-							</div>
-							<div class="col-lg-6">
-								<label for="">Teléfono</label> <input type="text"
-									th:field="*{phone}" class="form-control" id="phone"
-									placeholder="Ingrese el teléfono" /> <br>
-							</div>
-							<div class="col-lg-6">
-								<label for="">Direcciones</label> <select class="form-control"
-									th:field="*{addressHome}" name="txt_direccion" id="addressHome">
-									<option value="">Selecione una opción</option>
-									<option th:each="direccion:${direcciones}"
-										th:value="${direccion.code}" th:text="${direccion.city}" />
-								</select><br>
-							</div>
-							<input type="hidden" id="currentState" name="currentState"
-								value="1" />
-						</div>
-						<br> <br>
-
-						<div class="row" style="border: 2px solid silver">
-							<h4>Datos de Acceso</h4>
-							<div class="col-lg-6">
-								<label for="">Nombre de usuario</label> <input type="text"
-									th:field="*{nickname}" class="form-control" id="nickname"
-									placeholder="Ingrese el nombre de usuario" /> <br>
-							</div>
-							<div class="col-lg-6">
-								<label for="">Contraseña</label> <input type="hidden"
-									th:field="*{password}" value="123456789" /> <input type="text"
-									class="form-control" id="password" disabled="true"
-									placeholder="Generada aleatoriamente" /> <br>
-							</div>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<i class="fa fa-check"></i>&nbsp; <input type="submit"
-							class="btn btn-primary" value="Guardar" onclick="userRegister();" />
-
-						<button type="button" class="btn btn-danger" data-dismiss="modal">
-							<i class="fa fa-close"></i>&nbsp;Cerrar
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</form> -->
-
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-	<!-- Third party plugin JS-->
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
 	<script src="/js/users.js"></script>
 
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-
+	<footer th:replace="layouts/internt-layout.html :: 'footer' ">
+	</footer>
 
 </body>
 
