--- a/src/main/resources/templates/store/factura.html
+++ b/src/main/resources/templates/store/factura.html
@@ -63,6 +63,7 @@
 				</div>
 				<div class="card-body" id="datosClienteFactura">
 					<h4 class="card-title"></h4>
+					<input type="hidden" />
 					<div class="form-row">
 						<div class="form-group col-md-6">
 							<label for="names_costumer">Cliente</label> <input type="text"
@@ -130,6 +131,7 @@
 				</div>
 			</div>
 		</div>
+		<input type="submit" value="Añadir Factura" class="btn btn-secondary"/>
 	</form>
 	<br>
 	<br>
