--- a/src/main/resources/templates/layouts/internt-layout.html
+++ b/src/main/resources/templates/layouts/internt-layout.html
@@ -133,6 +133,16 @@
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
 			integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
 			crossorigin="anonymous"></script>
+			
+			
+			<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}" />
+			<script th:src="@{/js/jquery-3.2.1.min.js}"></script>
+			<script th:src="@{/js/popper.min.js}"></script>
+			<script th:src="@{/js/bootstrap.min.js}"></script>
+			<script th:src="@{/js/jquery-ui.min.js}"></script>
+			<script th:replace="store/js/autocomplete-product :: javascript"></script>
+		<script th:replace="store/js/autocomplete-cliente :: javascript"></script>
+		
 	</footer>
 </body>
 </html>
