--- a/src/main/resources/templates/store/factura.html
+++ b/src/main/resources/templates/store/factura.html
@@ -1,44 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="layouts/public-layout.html :: 'head' ">
+<head th:replace="layouts/internt-layout.html :: 'head' "></head>
 <link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}" />
 </head>
 <body id="page-top">
-	<!-- Navigation-->
-	<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-		<div class="container" sec:authorize="isAuthenticated()">
-			<a class="navbar-brand js-scroll-trigger" href="#page-top">Los
-				Chinitos</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button"
-				data-toggle="collapse" data-target="#navbarResponsive"
-				aria-controls="navbarResponsive" aria-expanded="false"
-				aria-label="Toggle navigation">
-				Menu <i class="fas fa-bars ml-1"></i>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav text-uppercase ml-auto">
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						th:href="@{/store/home}">Menú Principal</a></li>
-					<!-- ENLACE A USUARIOS -->
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						th:href="@{/store/factura}">Facturación</a></li>
-
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						href="#team"> <span class="btn btn-light btn-sm"
-							sec:authentication="name"></span></a></li>
-
-					<li class="nav-item">
-						<form th:action="@{/logout}" class="nav-link js-scroll-trigger"
-							method="post">
-							<button class="btn btn-danger btn-sm" type="submit">CERRAR
-								SESIÓN</button>
-						</form>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+	<header th:replace="layouts/internt-layout.html :: 'header' "></header>
 	<br>
 	<br>
 	<br>
@@ -63,7 +30,7 @@
 				</div>
 				<div class="card-body" id="datosClienteFactura">
 					<h4 class="card-title"></h4>
-					<input type="hidden" />
+					<input type="hidden" name="customer" id="customer" />
 					<div class="form-row">
 						<div class="form-group col-md-6">
 							<label for="names_costumer">Cliente</label> <input type="text"
@@ -130,8 +97,9 @@
 					</div>
 				</div>
 			</div>
+			<input type="submit" value="Añadir Factura" class="btn btn-secondary"/>
 		</div>
-		<input type="submit" value="Añadir Factura" class="btn btn-secondary"/>
+		
 	</form>
 	<br>
 	<br>
@@ -146,5 +114,5 @@
 <script th:src="@{/js/jquery-ui.min.js}"></script>
 <script th:replace="store/js/autocomplete-product :: javascript"></script>
 <script th:replace="store/js/autocomplete-cliente :: javascript"></script>
-<footer th:replace="layouts/public-layout.html :: 'footer' "> </footer>
+<footer th:replace="layouts/internt-layout.html :: 'footer' "></footer>
 </html>
