add update profiles

--- a/src/main/resources/templates/layouts/internt-layout.html
+++ b/src/main/resources/templates/layouts/internt-layout.html
@@ -47,7 +47,9 @@
 									data-bs-toggle="collapse"
 									th:data-bs-target="'#' + ${category.keyword} "
 									aria-expanded="false" aria-controls="collapseOne"
-									th:text="${category.name}"></button>
+									th:text="${category.name}"
+									style="background-color: #e7f1ff"
+									></button>
 							</h6>
 							<div th:id="${category.keyword}"
 								class="accordion-collapse collapse "
