--- a/src/main/resources/templates/config/systems.html
+++ b/src/main/resources/templates/config/systems.html
@@ -7,23 +7,27 @@
 	<main class="container mt-3">
 		<h1 class="mt-4">.</h1>
 		<section class="row">
+			<div class="col-sm-3">
+				<button type="button" class="btn btn-secondary">Secondary</button>
+			</div>
+		</section>
+
+		<section class="row">
 			<div class="col">
 				<table class="table">
 					<thead class="table-dark">
 						<tr>
-							<th scope="col">Nombre Menú</th>
-							<th scope="col">Título Página</th>
+							<th scope="col">Nombre</th>
 							<th scope="col">Descripción</th>
-							<th scope="col">url</th>
-							<th scope="col">editar</th>
+							<th scope="col">Estado</th>
+							<th scope="col">Editar</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="page: ${pages}">
-							<th th:text="${page.nameMenu}"></th>
-							<th th:text="${page.titlePage}"></th>
-							<th th:text="${page.description}"></th>
-							<th th:text="${page.url}"></th>
+						<tr th:each="system: ${systemsApp}">
+							<th th:text="${system.name}"></th>
+							<th th:text="${system.description}"></th>
+							<th th:text="${system.current? 'Activo' : 'Desactivado'}"></th>
 							<td>
 								<button type="button" class="btn btn-primary">
 									<i class="far fa-edit"></i>
