--- a/src/main/resources/templates/store/factura.html
+++ b/src/main/resources/templates/store/factura.html
@@ -64,6 +64,14 @@
 								id="address_costumer" placeholder="Dirección domiciliaria"
 								disabled="true">
 						</div>
+					</div><br>
+					<h5>Descripción de la Factura</h5>
+					<div class="form-row">
+						<div class="form-group col-md-6">
+							<label for="address_costumer">Ingrese una descripción de la factura</label> <input
+								type="text" class="form-control" name="descripcion_factura"
+								id="descripcion_factura" placeholder="Ingrese una descripción">
+						</div>
 					</div>
 				</div>
 				<div class="card-header">
