--- a/src/main/resources/templates/store/detalle-factura.html
+++ b/src/main/resources/templates/store/detalle-factura.html
@@ -15,32 +15,46 @@
 	<div class="alert alert-info" th:if="${info!=null}" th:text="${info}"></div>
 	
 	<div class="container py-4">
-	<a th:href="@{/customers}" class="btn btn-danger">Regresar</a><br><br>
 		<div class="card bg-light">
-			<div class="card-header bg-dark">
-				<h3 th:text="${titulo}" style="color:white;"></h3>
+			<div class="card-header" th:text="${titulo}"></div>
+			<div class="card-body">
+				<h4 class="card-title">
+					<a th:href="@{'/fact-cliente/'+${factura.customer.id_customer}}" class="btn btn-light btn-xs">&laquo; Volver</a>
+					<a class="btn btn-danger btn-xs float-right" th:href="@{'/factura/'+${factura.id_factura}(format=pdf)}">Exportar PDF</a>
+				</h4>
+				<ul class="list-group my-2">
+					<li class="list-group-item list-group-item-primary" th:text="'Datos del cliente'"></li>
+					<li class="list-group-item" th:text="${factura.customer.names_customer} + ' ' + ${factura.customer.lastnames_customer}"></li>
+					<li class="list-group-item" th:text="${factura.customer.email_customer}"></li>
+				</ul>
+				<ul class="list-group">
+					<li class="list-group-item list-group-item-success" th:text="'Datos de la factura'"></li>
+					<li class="list-group-item" th:text="'Cod de Factura: ' + ${factura.id_factura}"></li>
+					<li class="list-group-item" th:text="'Descripcion: ' + ${factura.descripcion_factura}"></li>
+					<li class="list-group-item" th:text="'Fecha: ' + ${factura.emision_factura}"></li>
+				</ul>
+				<table class="table table-striped table-hover table-bordered my-3">
+					<thead>
+						<tr>
+							<th>Producto</th>
+							<th>Precio</th>
+							<th>Cantidad</th>
+							<th>Total</th>
+							<th>Imagen Producto</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="linea: ${factura.items}">
+							<td th:text="${linea.product.name_product}"></td>
+							<td th:text="${linea.product.price_product}"></td>
+							<td th:text="${linea.cantidad_item}"></td>
+							<td th:text="${linea.calcularImporte()}"></td>
+							<td style="width:100px"><img class="img-responsive float-right" style="width: 120%;" th:src="@{'/uploads/'+${linea.product.img_product}}" th:alt="${linea.product.img_product}"> </td>
+						</tr>
+					</tbody>
+				</table>
+				<h5 class="float-right">Total de la Factura: <span th:text="${factura.total}" class="badge badge-secondary"></span></h5>
 			</div>
-				<div class="card-body">
-					<div th:if="${#lists.isEmpty(customer.facturas)}" class="alert alert-info my-4" th:text="'No hay facturas asignadas para el cliente'+${customer.names}+' '+{customer.lastnames}"></div>
-					<table th:if="${not #lists.isEmpty(customer.facturas)}" class="table table-bordered tabled striped my-4">
-						<thead class="thead-dark">
-							<tr>
-								<th>Cod Factura</th>
-								<th>Descripción</th>
-								<th>Fecha</th>
-								<th>Total</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="factura: ${customer.facturas}">
-								<td th:text="${factura.id_factura}"></td>
-								<td th:text="${factura.descripcion_factura}"></td>
-								<td th:text="${factura.emision_factura}"></td>
-								<td th:text="${factura.total}"></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
 		</div>
 	</div>
 
