--- a/src/main/resources/templates/store/factura-cliente.html
+++ b/src/main/resources/templates/store/factura-cliente.html
@@ -29,6 +29,7 @@
 								<th>Descripción</th>
 								<th>Fecha</th>
 								<th>Total</th>
+								<th>Detalles</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -37,6 +38,7 @@
 								<td th:text="${factura.descripcion_factura}"></td>
 								<td th:text="${factura.emision_factura}"></td>
 								<td th:text="${factura.total}"></td>
+								<td><a class="btn btn-primary btn-xs" th:href="@{'/factura/'+${factura.id_factura}}"><i class="fa fa-list-ul" aria-hidden="true"></i></a></td>
 							</tr>
 						</tbody>
 					</table>
