--- a/src/main/resources/templates/users/users-view.html
+++ b/src/main/resources/templates/users/users-view.html
@@ -8,6 +8,11 @@
 <body id="page-top ">
 	<header th:replace="layouts/internt-layout.html :: 'header' "></header>
 
+	<div class="alert alert-success" th:if="${success!=null}" th:text="${success}"></div>
+	<div class="alert alert-danger" th:if="${danger!=null}" th:text="${error}"></div>
+	<div class="alert alert-warning" th:if="${warning!=null}" th:text="${warning}"></div>
+	<div class="alert alert-info" th:if="${info!=null}" th:text="${info}"></div>
+
 	<div class="container mt-3">
 		<h1 class="mt-4" th:text="${titulo}"></h1>
 		<div class="form-group">
@@ -51,8 +56,14 @@
 			</tbody>
 		</table>
 	</div>
+	
+	<!-- <div th:object="${usuario}" th:remove="tag">
+		<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+			<li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
+		</ul>
+	</div>-->
 
-	<form method="post" th:object="${usuario}" th:action="@{/newUser}">
+	<form method="post" th:object="${usuario}" th:action="@{/newUser}" id="formUsuario">
 		<div class="modal fade" id="modal_registro_usuario" role="dialog">
 			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
@@ -89,6 +100,8 @@
 										<input type="text" th:field="*{numDocument}"
 											class="form-control" id="numDocument"
 											placeholder="1700000001" />
+										<label for="" id="cedulaOK" style="color:black;"></label>
+										<input type="text" id="validar_cedula" hidden> 
 									</div>
 								</div>
 								<div class="form-group row">
@@ -106,10 +119,10 @@
 								<h5 class="text-center">Imagen del Usuario</h5>
 								<div class="card">
 									<img class="card-img-top card-user-img" src="/img/user.png"
-										alt="Card image cap">
+										alt="Card image cap" id="img_user">
 									<div class="card-body" style="width: auto;">
 										<input type="file" value="Seleccionar archivo"
-											style="color: transparent; background-color: transparent;" />
+											style="color: transparent; background-color: transparent;" id="img_input" src=""/>
 									</div>
 								</div>
 							</div>
@@ -261,7 +274,7 @@
 					<div class="modal-footer">
 
 						| <i class="fa fa-check"></i>&nbsp; <input type="submit"
-							class="btn btn-primary" value="Guardar" onclick="userRegister();" />
+							class="btn btn-primary" value="Guardar" />
 
 						<button type="button" class="btn btn-danger" data-dismiss="modal">
 							<i class="fa fa-close"></i>&nbsp;Cerrar
@@ -272,6 +285,9 @@
 		</div>
 	</form>
 
+<script th:src="@{/js/jquery-3.2.1.min.js}"></script>
+<script th:src="@{/js/popper.min.js}"></script>
+<script th:src="@{/js/bootstrap.min.js}"></script>
 
 	<script src="/js/users.js"></script>
 
